force-app/main/default/objects/Vegetation_Zone__c/fields/Days_Since_Trim__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Trim__c</fullName>
    <label>Days Since Last Trim</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <formula>IF(NOT(ISBLANK(Last_Trim_Date__c)), TODAY() - Last_Trim_Date__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>