force-app/main/default/objects/Vegetation_Zone__c/fields/Trim_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Trim_Overdue__c</fullName>
    <label>Trim Overdue</label>
    <type>Checkbox</type>
    <formula>IF(NOT(ISBLANK(Last_Trim_Date__c)), TODAY() - Last_Trim_Date__c > 365, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>