force-app/main/default/objects/Vegetation_Zone__c/fields/Vegetation_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Vegetation_Risk_Score__c</fullName>
    <label>Vegetation Risk Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <formula>IF(ISPICKVAL(Flammability_Rating__c, "Extreme"), 20,
    IF(ISPICKVAL(Flammability_Rating__c, "High"), 15,
    IF(ISPICKVAL(Flammability_Rating__c, "Medium"), 8, 3))) +
    IF(Distance_to_Line__c &lt; Min_Clearance__c, 10, 0) +
    IF(Trim_Overdue__c, 5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>